@@ -244,3 +244,4 @@ T_395remove_bitstream_ar_info:ec3cb098245f2b73bd908fab49fcc429-8ef61124e43d22308
 T_396X_pcm_mono_16bit:49b80add61d8a11514d747c9616f7e80:passed:20130624-200214:0.055106028
 T_397mpeg_ts_broken_pes_track_detection:6e62b36de6d8bc4cefd61911728e8e4e:passed:20130624-220549:1.12831027
 T_398flv1_no_pixel_dimensions:11c434c5bc0c888e0ed9c9d571d21c41:passed:20130624-225648:0.103188723
+T_399h264_append_and_default_duration:6145dd28cab6985647c38739d952d7bc:passed:20130627-195946:5.558958754
